<resources>
    <string name="app_name">IMC</string>
    <string name="btn_Calcular">CALCULAR</string>
    <string name="txt_altura">INFORME A ALTURA:</string>
    <string name="txt_ex_altura">Exemplo: 1.60</string>
    <string name="txt_peso">INFORME O PESO:</string>
    <string name="txt_ex_peso">Exemplo: 60</string>
    <string name="resultado">RESULTADO:</string>
    <string name="valoresInvalidos">Valores Inválidos!</string>
    <string name="impossivelDividirPorZero">Impossível divisão por zero!</string>
    <string-array name="imc">
        <item>Muito abaixo do peso.</item>
        <item>Abaixo do peso.</item>
        <item>Peso normal.</item>
        <item>Acima do peso.</item>
        <item>Obesidade I.</item>
        <item>Obesidade II (severa).</item>
        <item>Obesidade III (mórbida)</item>
    </string-array>
</resources>